[package]
name = "virt"
version = "0.2.12"
edition = "2018"
authors = ["Sahid Orentino Ferdjaoui <sahid.ferdjaoui@libremel.fr>",]
license = "LGPL-2.1"
readme = "README.md"
description = "Rust bindings to the libvirt C library"
documentation = "https://docs.rs/virt"
keywords = ["libvirt", "virtualization", "KVM", "QEMU", "Xen",]
categories = ["api-bindings", "emulators",]
repository = "https://gitlab.com/libvirt/libvirt-rust"
homepage  = "https://libvirt.org/"

[dependencies]
libc = "0.2.0"
virt-sys = { path = "virt-sys", version = "0.1.0", default-features = false }

[features]
qemu = ["virt-sys/qemu"]
default = ["libvirt-5-10-0"]
# libvirt-X-Y-Z: enable bindings for APIs which appeared in libvirt X.Y.Z
libvirt-5-10-0 = ["virt-sys/libvirt-5-10-0"]
libvirt-6-1-0 = ["virt-sys/libvirt-6-1-0", "libvirt-5-10-0"]
libvirt-6-10-0 = ["virt-sys/libvirt-6-10-0", "libvirt-6-1-0"]
libvirt-7-1-0 = ["virt-sys/libvirt-7-1-0", "libvirt-6-10-0"]
libvirt-7-5-0 = ["virt-sys/libvirt-7-5-0", "libvirt-7-1-0"]
